// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextField /> should render component 1`] = `
Array [
  .c0 {
  font-size: 16px;
  font-weight: 400;
  line-height: 1.25;
}

.c1 {
  width: 100%;
  border: 1px solid #88989E;
  padding: 12px 16px;
  outline: 0;
  border-radius: 12px;
  margin-bottom: 0;
}

<input
    class="c0 c1"
    name="username"
    placeholder="Nome"
    type="text"
    value="Gustavo"
  />,
]
`;

exports[`<TextField /> when field is invalid should display the respective error message 1`] = `
.c0 {
  font-size: 16px;
  font-weight: 400;
  line-height: 1.25;
}

.c1 {
  width: 100%;
  border: 1px solid #88989E;
  padding: 12px 16px;
  outline: 0;
  border-radius: 12px;
  margin-bottom: 0;
  border-color: #dc3545;
}

.c1 + span {
  color: #dc3545;
  font-size: 11px;
}

<input
  class="c0 c1"
  name="email"
  placeholder="Email"
  type="text"
  value=""
/>
`;
